<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"

        android:id="@+id/linearLayout">
    <TextView
            tools:text="@string/city_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/city_text"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="24dp" app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginTop="8dp" android:textSize="18sp"
            android:ellipsize="marquee" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/temp_c"/>
    <TextView
            tools:text="@string/condition_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/condition_text"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="24dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:layout_marginBottom="7dp"
            android:ellipsize="marquee" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/feelsLike_c"/>
    <TextView
            tools:text="@string/temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temp_c"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            tools:text="@string/feelslike_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feelsLike_c"
            android:textSize="12sp"
            android:foregroundGravity="center" android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

