<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.DetailWeatherFragment"
                                                   android:id="@+id/fragment_detail_weather">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/detailAppBarLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/detailToolBar">


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            tools:text="@string/city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city" android:textSize="24sp"
            android:foregroundGravity="center" android:gravity="center"

            android:visibility="visible"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/region_text"/>
    <TextView
            tools:text="@string/temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temp_c" android:textSize="18sp"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:visibility="visible"
            app:layout_constraintTop_toTopOf="@+id/progressBar"
            android:layout_marginTop="56dp"/>
    <TextView
            tools:text="@string/condition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/condition_text"
            android:foregroundGravity="center" android:gravity="center_horizontal"

            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:visibility="visible" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/city"/>
    <TextView
            tools:text="@string/last_update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_updated"

            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/wind_kph"
            app:layout_constraintVertical_bias="1.0" android:visibility="visible"/>
    <TextView
            tools:text="@string/region_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/region_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:visibility="visible"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/temp_c" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/country_text"
            android:layout_marginStart="8dp"/>
    <TextView
            tools:text="@string/feelslike_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feelsLike_c"
            android:foregroundGravity="center"
            android:gravity="center_horizontal"

            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/temp_c" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/weatherIcon"
            android:foregroundGravity="center"

            android:contentDescription="@string/weatherIcon_text"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.499"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/condition_text"
            android:visibility="visible"
    />
    <TextView
            tools:text="@string/wind_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wind_kph"

            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/feelsLike_c" android:visibility="visible"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    <TextView
            tools:text="Country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/country_text"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/region_text"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/region_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>