<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:id="@+id/item">
    <TextView
            tools:text="@string/city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city_text"
            android:singleLine="true"
            android:textSize="24sp"
            android:ellipsize="marquee"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp"/>
    <TextView
            tools:text="@string/condition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/condition_text"
            android:ellipsize="marquee"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp" android:textSize="18sp"/>
    <TextView
            tools:text="@string/temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temp_c"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"/>
    <TextView
            tools:text="@string/feelslike_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feelsLike_c"
            android:textSize="14sp"
            android:foregroundGravity="center" android:gravity="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="Coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coordinates_text" android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/city_text" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

